<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MyRoommates !</string>

    <!-- facebook -->
    <!-- localhost -->
    <!--<string name="facebook_app_id" translatable="false">454895048036042</string>-->
    <!-- prod -->
    <string name="facebook_app_id" translatable="false">1432915530336007</string>

    <!-- TECHNICAL -->
    <string name="field_text_password_show">Show</string>
    <string name="field_text_password_hide">Hide</string>

    <!-- GENERIC -->
    <string name="g_registration">Registration</string>
    <string name="g_welcome">Home</string>
    <string name="g_lastName">Last Name</string>
    <string name="g_name">name</string>
    <string name="g_firstName">First Name</string>
    <string name="g_continue">Continue</string>
    <string name="g_password">Password</string>
    <string name="g_login">Login</string>
    <string name="g_back">Back</string>
    <string name="g_value">Value</string>
    <string name="g_date">Date</string>
    <string name="g_desc">Description</string>
    <string name="g_edit">Edit</string>
    <string name="g_email">Email</string>
    <string name="g_submit">Submit</string>
    <string name="g_loading">Loading ...</string>
    <string name="g_price">Price</string>
    <string name="g_close">Close</string>
    <string name="g_none">None</string>
    <string name="g_valid">Valid</string>
    <string name="g_refresh">Refresh</string>
    <string name="g_add">Add</string>
    <string name="g_remove">Remove</string>
    <string name="g_save">Save</string>
    <string name="g_name_abrv">Acronym</string>
    <string name="g_total">Total</string>
    <string name="g_warning">Warning</string>
    <string name="g_category">Category</string>
    <string name="logout">Logout</string>
    <string name="g_cancel">Cancel</string>
    <string name="calculator">Calculator</string>
    <string name="g_money">Money</string>
    <string name="g_save_data_success">Modifications have been saved</string>
    <string name="g_error">Error</string>


    <!-- HOME -->
    <string name="welcome_bought_shopping_item">I bought these articles</string>
    <string name="welcome_add_shopping_item_btn">Add an article</string>
    <string name="welcome_add_ticket_btn">Add a ticket</string>
    <string name="welcome_dept_txt">Your current sold is :</string>
    <string name="welcome_title_count">accounts</string>
    <string name="welcome_title_shopping">Shopping</string>
    <string name="welcome_bought_shopping_warning">you must selected at least one article</string>

    <!-- shopping -->
    <string name="shopping_only_for_me">Only for me</string>
    <string name="shopping_only_for_me_little">(For me)</string>
    <string name="edit_shopping_item_edit">Edit article</string>
    <string name="edit_shopping_item_create">Create an article</string>
    <string name="edit_ticket_category_shopping">Shopping</string>
    <string name="edit_ticket_desc_shopping">Shopping</string>

    <!-- NAVIGATION -->
    <string name="nav_drawer_welcome">Home</string>
    <string name="nav_drawer_config">Configuration</string>
    <string name="nav_drawer_count">Counts</string>
    <string name="nav_drawer_chore">Chores</string>
    <string name="nav_drawer_shopping">Shopping</string>
    <string name="nav_drawer_events">Events</string>
    <string name="nav_drawer_my_profile">My profile</string>
    <string name="nav_drawer_about_about">About</string>

    <string name="nav_count_ticket">Ticket list</string>
    <string name="nav_count_resume">Resume</string>

    <string name="nav_config_roommate">List of roommates</string>
    <string name="nav_config_preference">Preferences</string>

    <string name="nav_shopping_item">List of shopping</string>

    <string name="nav_event_item">List of events</string>
    <string name="nav_event_calendar">Calendar</string>

    <string name="nav_roommate_list">Roommates list</string>

    <!-- select_with_open -->
    <string name="select_with_open_new">New ...</string>

    <!-- roommate edit -->
    <string name="edit_roommate_edit">Edit roommate</string>
    <string name="edit_roommate_create">Create roommate</string>

    <!-- roommate list -->
    <string name="roommate_remove_confirm_message">This roommate will show only on history and will not take in care for count balance. Continue ?</string>

    <!-- ticket edit -->
    <string name="edit_ticket_edit">Edit ticket</string>
    <string name="edit_ticket_create">Create ticket</string>
    <string name="ticket_equal_repartition">Equal repartition</string>

    <!-- login activity -->
    <string name="login_activity_login">Login you</string>
    <string name="login_activity_forgot_password">Forgot password ?</string>
    <string name="a_login_registration_button">Create a new roommate</string>

    <!-- forgot password activity -->
    <string name="activity_forgot_password">Forgot password ?</string>

    <!-- ticket orderby -->
    <string name="order_by">Order by</string>
    <string-array name="ticket_order_criteria">
        <item>Date</item>
        <item>Category</item>
        <item>Roommate</item>
    </string-array>

    <!-- shopping order by -->
    <string-array name="shopping_order_criteria">
        <item>Date</item>
        <item>Roommate</item>
    </string-array>

    <!-- count -->
    <string name="count_resume_dept">Dept</string>
    <string name="count_resume_difference">Difference</string>
    <string name="count_resume_payed">Payed</string>
    <string name="count_how_to_resolve_title">How to resolve</string>
    <string name="count_resume_title">Resume</string>
    <string name="result_balance_from">must pay</string>
    <string name="result_balance_to">to</string>

    <string name="roommate_create">Create a new account</string>
    <string name="createTicket_title">Create ticket</string>
    <string name="createShoppingItem_title">Create an article</string>
    <string name="my_name">Your name</string>

    <!-- error -->
    <!-- error -->
    <string name="notConnectedDescr">Your device is currently not connected</string>
    <string name="error_unexpected" translatable="false">Erreur inattendues : {0}</string>
    <string name="error_webclient_result_null" translatable="false">Expected {0} but this param is null</string>
    <string name="error_webclient_wrong_send_dto" translatable="false">Sent dto expected {0} but found {1}</string>
    <string name="VALIDATION_SIZE">Between {0} and {1} characters</string>
    <string name="VALIDATION_NOT_NULL">This field can not be left blank.</string>
    <string name="VALIDATION_PASSWORD">Please use between 6 and 18 letters, numbers or -_</string>
    <string name="VALIDATION_EMAIL">Email expected</string>

    <string name="error_wrong_sent_dto">Sent dto expected {0} but found {1}</string>
    <string name="error_wrong_received_dto">Received dto expected {0} but found {1}</string>
    <string name="error_null_element">Expected {0} but this param is null</string>
    <string name="error_not_online">It seems your devise is not online</string>
    <string name="loading_activity_loading">Loading...</string>
    <string name="dialog_change_password_title">Change password</string>
    <string name="dialog_change_password_old_password">Current password</string>
    <string name="dialog_change_password_new_password">New password</string>
    <string name="verification_email">Email expected</string>
    <string name="verification_password">Between 6 and 18 letters, number or _-</string>
    <string name="verification_not_null">This field is requiert</string>
    <string name="verification_roommate_name">Between 2 and 50 caracters</string>
    <string name="verification_home_money_symbol">Between 1 and 3 caracters</string>
    <string name="verification_roommate_nameAbrv">Between 1 and 3 caracters</string>
    <string name="verification_description">Between 1 and 1000 caracters</string>
    <string name="nav_drawer_about_contact">Contact us</string>
    <string name="nav_drawer_about_faq">FAQ</string>
    <string name="verification_contact_us_content">Between 1 and 3000 caraters</string>
    <string name="verification_contact_us_subject">Between 1 and 255 caraters</string>
    <string name="g_message">Message</string>
    <string name="g_subject">Subject</string>
    <string name="g_send">Send</string>
    <string name="about_contact_us_success">Your message was send successfully. Our team will respond you as soon as
        possible
    </string>
    <string name="about_contact_us_info">Contact us to report a bug , suggest improvements , etc. Only in English or
        French .
    </string>
    <string name="dialog_change_password_new_success">Your new password was saved</string>
    <string name="skip">Skip</string>
    <string name="survey_answer_thanks">Thanks for your participation</string>
    <string name="help_roommate_list">You can now invite your roommates to the application : use the + button on the top.</string>
    <string name="help_not_registered">Your device is not logged to Roommates!. If you never had a Roommates! account, you can create a new one or logged your device to an existent account.</string>
    <string name="a_login_login_button">Active a existent account</string>
    <string name="help_registration">Welcome to Roommates!. Start to create a new account. You\'ll receive an email with your reactivation password.</string>
    <string name="help_login">You can use your password or the reactivation key sent by email while registration to connect your device to your account. You can also receive a new password with I forgot my password</string>
    <string name="edit_ticket_skip">Do not create a ticket for this articles</string>
    <string name="help_welcome_fragment">You can use the Home panel to manage all aspects of your house. Other features coming soon !</string>
    <string name="forgot_password_success">A new password was send to your email address.</string>
    <string name="help_forgot_password">Get your email address and we\'ll send you a new password by e-mail</string>
    <string name="g_comment">Comment</string>
    <string name="editComment_title">Comment</string>
    <string name="commentLog_title">comments</string>
    <string name="add_comment">Add a comment</string>
    <string name="comment_placeholder">Add a comment...</string>
    <string name="dialog_confirm_google_account_help">This is the first time you use your Google Account to loggin you to MyRoommates. Please get your MyRoommates password to confirm your identity.</string>
    <string name="dialog_confirm_google_account_title">Confirmez votre identité</string>
    <string name="or">Or</string>


    <!-- dialog confirm -->
    <string name="dialog_generic_confirm_title">Confirm ?</string>
    <string name="dialog_confirm_generic_ok">Confirm</string>

    <!-- chore -->
    <string name="help_chore">Add new chores for your roommate. They will automacilaty distributed between all the roommates</string>
    <string name="edit_chore_edit">Edit a chore</string>
    <string name="create_chore_edit">Create a chore</string>
    <string name="createChore_title">Create chore</string>
    <string name="chore_description">Description (optional)</string>
    <string name="welcome_title_chore">Your current chore</string>
    <string name="chore_frequency">Chore frequency</string>

    <string-array name="chore_frequency_criteria">
        <item>One week</item>
        <item>Two weeks</item>
        <item>Four weeks</item>
    </string-array>

</resources>
