<LinearLayout android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              style="@style/bg_element"
    android:orientation="vertical"
        >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/element"
            android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/title_h3"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/icon_count_black"
                />
            <TextView
                android:layout_width="match_parent"
                style="@style/title_h3_text"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title_count"
                />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:layout_marginLeft="20dp">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_dept_txt"/>
            <TextView
                    android:id="@+id/current_sold"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />

        </LinearLayout>

        <Button android:id="@+id/welcome_add_ticket_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_add_ticket_btn"
                style="@style/button"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/element"
        android:weightSum="1">



        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/title_h3"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/icon_shopping_black"
            />
        <TextView
            android:layout_width="match_parent"
            style="@style/title_h3_text"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title_shopping"
            />
    </LinearLayout>

        <Button android:id="@+id/welcome_add_shopping_item_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_add_shopping_item_btn"
                style="@style/button"
                />

        <!-- list content -->

        <ListView
                android:layout_width="fill_parent"
                android:id="@+id/list_insertion"
                android:minHeight="200dp"
                android:choiceMode="multipleChoice"
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </ListView>
        <Button android:id="@+id/welcome_bought_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_bought_shopping_item"
                style="@style/button"
                />
    </LinearLayout>

    <!-- help -->
    <TextView
        android:layout_alignParentBottom="true"
        style="@style/help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_welcome_fragment"
        />

</LinearLayout>
