<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/insert_point"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_skip"
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_ticket_skip" />

            <FrameLayout
                android:id="@+id/separate_line"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:background="@color/light_border" />


            <!-- category -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!-- label -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/g_category"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/category_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"></LinearLayout>


            </LinearLayout>


            <!-- equalRepartition -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!-- label -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical|center"
                    android:text="@string/ticket_equal_repartition"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/equal_repartition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </LinearLayout>

            <!-- value -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!-- label -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/g_total"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/b_calculator_value_total"
                        style="@style/button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/calculator" />

                    <EditText
                        android:id="@+id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>